<resources>
    <string name="app_name">My Chat Application</string>
    <string name="sign_up">Sign Up</string>
    <string name="new_user">New User? </string>
    <string name="sign_in">Sign in</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="developed_by">DEVELOPED BY</string>
    <string name="preetham">PREETHAM</string>
    <string name="app_icon">App icon</string>
    <string name="existing_user">Existing User? </string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="my_chat">My Chat</string>
    <string name="status">Status</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="type_your_message">Type your message...</string>
</resources>