<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/app_icon"
            android:src="@drawable/app_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spartan_bold"
            android:gravity="center"
            android:text="@string/my_chat"
            android:textColor="@color/primary_text"
            android:textSize="40sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/spartan_regular"
            android:gravity="center"
            android:text="@string/developed_by"
            android:textColor="@color/secondary_text"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spartan_bold"
            android:gravity="center"
            android:text="@string/preetham"
            android:textColor="@color/primary"
            android:textSize="20sp" />


    </LinearLayout>


</RelativeLayout>