<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UseCompoundDrawables">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spartan_bold"
            android:gravity="center"
            android:text="@string/create_account"
            android:textColor="@color/primary_text"
            android:textSize="40sp"
            android:textStyle="bold" />

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/default_image"
            app:civ_border_color="#FF000000"
            app:civ_border_width="2dp" />

        <EditText
            android:id="@+id/name_of_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edittext_shape"
            android:fontFamily="@font/spartan_regular"
            android:hint="@string/name"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/secondary_text" />

        <EditText
            android:id="@+id/email_id_of_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_shape"
            android:fontFamily="@font/spartan_regular"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/secondary_text" />

        <EditText
            android:id="@+id/password_of_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_shape"
            android:fontFamily="@font/spartan_regular"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/secondary_text" />

        <EditText
            android:id="@+id/confirm_password_of_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_shape"
            android:fontFamily="@font/spartan_regular"
            android:hint="Confirm Passward"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/secondary_text" />

        <TextView
            android:id="@+id/sign_up_of_registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/sign_in_button"
            android:fontFamily="@font/spartan_bold"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="18sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spartan_regular"
            android:text="@string/existing_user"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/sign_in_of_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/spartan_bold"
            android:text="@string/sign_in"
            android:textColor="@color/primary"
            android:textSize="16sp" />

    </LinearLayout>


</RelativeLayout>